Converted string concats to text